<resources>
    <string name="app_name">kidogo</string>
    <!-- Utility strings -->
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>

    <!-- Child enrollment strings -->
    <string name="first_name_label">What is the child\'s name?</string>
    <string name="first_name_hint">First Name</string>
    <string name="surname_label">What is the child\'s surname?</string>
    <string name="surname_hint">Last Name</string>
    <string name="birthday_label">When was the child born</string>
    <string name="notes_label">Notes</string>
    <string name="gender_label">What is the child\'s gender?</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="not_listed">Not listed</string>

    <string name="add_another_child">Add another child</string>

    <!-- Family strings -->
    <string name="family_surname_placeholder">The [placeholder] Family</string>
    <string name="parent">Parent</string>
    <string name="children">Children</string>
    <string name="emergency_contact">Emergency Contact</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>