<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">
    <EditText
        android:id="@+id/firstname_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/first_name_hint"
    />
    <TextView
        android:id="@+id/firstname_label"
        android:text="@string/first_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstname_input"
    />

    <EditText
        android:id="@+id/surname_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/surname_hint"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstname_label"
        android:layout_marginTop="16dp"/>
    <TextView
        android:id="@+id/surname_label"
        android:text="@string/surname_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/surname_input"
    />
    <RadioGroup
        android:id="@+id/gender_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/surname_label"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:checkedButton="@id/gender_option_not_listed">
        <RadioButton
            android:id="@+id/gender_option_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"/>
        <RadioButton
            android:id="@+id/gender_option_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"/>
        <RadioButton
            android:id="@+id/gender_option_not_listed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_listed"/>
    </RadioGroup>
    <TextView
        android:id="@+id/gender_label"
        android:text="@string/gender_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gender_input"
    />

    <DatePicker
       android:id="@+id/birthday_picker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gender_label"
        android:layout_marginTop="16dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
    />
    <TextView
        android:id="@+id/birthday_label"
        android:text="@string/birthday_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/birthday_picker"
    />

    <EditText
        android:id="@+id/notes_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthday_label"
        android:layout_marginTop="16dp"
        android:layout_height="150dp"
        android:layout_width="match_parent"
        android:inputType="text|textMultiLine"
        android:gravity="top"
        android:hint="@string/notes_label"
    />
    <TextView
        android:id="@+id/notes_label"
        android:text="@string/notes_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notes_input"
    />
    <Button
        android:id="@+id/add_another_child_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notes_label"
        android:text="@string/add_another_child"
    />



</androidx.constraintlayout.widget.ConstraintLayout>