<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    tools:context=".AddChildFragment">
    <LinearLayout
        android:id="@+id/name_wrapper"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical" >
            <EditText
                android:id="@+id/firstname_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:hint="@string/first_name_hint"
                />
            <TextView
                android:id="@+id/firstname_label"
                android:text="@string/first_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/firstname_input"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical" >
            <EditText
                android:id="@+id/surname_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/surname_hint"
                android:inputType="text" />
            <TextView
                android:id="@+id/surname_label"
                android:text="@string/surname_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/surname_input"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/birthday_gender_wrapper"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/name_wrapper"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp">
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical" >
            <RadioGroup
                android:id="@+id/gender_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name_wrapper"
                android:orientation="vertical"
                android:checkedButton="@id/gender_option_not_listed">
                <RadioButton
                    android:id="@+id/gender_option_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"/>
                <RadioButton
                    android:id="@+id/gender_option_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"/>
                <RadioButton
                    android:id="@+id/gender_option_not_listed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_listed"/>
            </RadioGroup>
            <TextView
                android:id="@+id/gender_label"
                android:text="@string/gender_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/gender_input"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical" >
            <DatePicker
                android:id="@+id/birthday_picker"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_height="142dp"
                android:layout_width="wrap_content"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                />
            <TextView
                android:id="@+id/birthday_label"
                android:text="@string/birthday_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/birthday_picker"
            />
        </LinearLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/notes_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthday_gender_wrapper"
        android:layout_marginTop="16dp"
        android:layout_height="150dp"
        android:layout_width="match_parent"
        android:inputType="text|textMultiLine"
        android:gravity="top"
        android:hint="@string/notes_label"
    />
    <TextView
        android:id="@+id/notes_label"
        android:text="@string/notes_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notes_input"
    />
    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notes_label"
        android:text="@string/save"
    />


</androidx.constraintlayout.widget.ConstraintLayout>